Fixed aside menu not centered on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -697,6 +697,7 @@ hr {
 .aside-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .service-aside {
